test handle /bin/bash

--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -17,6 +17,9 @@
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
+  
+- name: test
+  shell: exec $SHELL
 
 - name: install plugins for selected users
   git:
