--- a/playbook.yml
+++ b/playbook.yml
@@ -4,7 +4,9 @@
     rbenv:
       env: user
       version: v1.1.2
-      default_ruby:  2.6.5
+      default_ruby: 2.6.5p114
+      rubies:
+        - version: 2.6.5p114
     rbenv_extra_depends:
       - libjemalloc1
       - libjemalloc-dev
