--- a/playbook.yml
+++ b/playbook.yml
@@ -7,6 +7,8 @@
       default_ruby: 2.6.5
       rubies:
         - version: 2.6.5
+          env:
+            RUBY_CONFIGURE_OPTS: "--enable-shared"
     rbenv_extra_depends:
       - libjemalloc1
       - libjemalloc-dev
