--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
   gather_facts: true
   vars:
     rbenv:
-      env: user
+      env: system
       version: v1.1.2
       default_ruby: 2.6.5
       rubies:
