--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
   gather_facts: true
   vars:
     rbenv:
-      env: system
+      env: test
       version: v1.1.2
       default_ruby: 2.6.5
       rubies:
@@ -14,5 +14,5 @@
       - libjemalloc-dev
   
   roles:
-    - { role: 'ansible-rbenv-role', tags: 'init', rbenv_users: "{{ ansible_user_id }}", become: yes }
+    - { role: 'ansible-rbenv-role', tags: 'init', rbenv_users: "{{ ansible_user_id }}" }
     - { role: 'ansible-role-nodejs', tags: 'init', become: yes }
