--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -34,6 +34,7 @@
 - name: Test bashrc for line
   shell: "grep '^# ANSIBLE MANAGED BLOCK - rbenv' {{ ansible_env.HOME }}/.bashrc"
   register: test_grep
+  check_mode: no
 
 - name: Ensure rbenv is sourced from the .bashrc
   blockinfile:
