--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -33,8 +33,9 @@
 
 - name: Test bashrc for line
   shell: "grep '^# ANSIBLE MANAGED BLOCK - rbenv' {{ ansible_env.HOME }}/.bashrc"
+  changed_when: false
+  failed_when: false
   register: test_grep
-  check_mode: no
 
 - name: Ensure rbenv is sourced from the .bashrc
   blockinfile:
