--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -86,7 +86,7 @@
     - rbenv_set_vars | bool
 
 - name: check ruby versions installed for select users
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv versions --bare"
+  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv versions --bare"
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
@@ -96,7 +96,7 @@
   check_mode: no
 
 - name: install ruby {{ item[1].version }} for select users
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv install --skip-existing {{ item[1].version }}"
+  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv install --skip-existing {{ item[1].version }}"
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
@@ -132,7 +132,7 @@
   when: rbenv_clean_up | bool
 
 - name: check if user ruby version is {{ rbenv.default_ruby }}
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
+  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
   become: yes
   become_user: "{{ item }}"
   with_items: "{{ rbenv_users }}"
@@ -142,7 +142,7 @@
   check_mode: no
 
 - name: set ruby {{ rbenv.default_ruby }} for select users
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
+  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
   become: yes
   become_user: "{{ item[1] }}"
   with_together:
