--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -85,7 +85,9 @@
     - rbenv_set_vars | bool
 
 - name: check ruby versions installed for select users
-  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv versions --bare"
+  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv versions --bare"
+  args:
+    executable: /bin/bash
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
@@ -93,11 +95,13 @@
   changed_when: false
   failed_when: false
   check_mode: no
+  
 
 - name: install ruby {{ item[1].version }} for select users
-  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv install --skip-existing {{ item[1].version }}"
+  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv install --skip-existing {{ item[1].version }}"
   become: yes
   args:
+    executable: /bin/bash
     creates: "~/.rbenv/versions/{{ item[1].version }}"
   become_user: "{{ item[0] }}"
   with_nested:
@@ -131,7 +135,9 @@
   when: rbenv_clean_up | bool
 
 - name: check if user ruby version is {{ rbenv.default_ruby }}
-  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
+  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
+  args:
+    executable: /bin/bash
   become: yes
   become_user: "{{ item }}"
   with_items: "{{ rbenv_users }}"
@@ -141,7 +147,9 @@
   check_mode: no
 
 - name: set ruby {{ rbenv.default_ruby }} for select users
-  shell: "source {{ ansible_env.HOME }}/.bashrc && rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
+  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
+  args:
+    executable: /bin/bash
   become: yes
   become_user: "{{ item[1] }}"
   with_together:
