--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -86,7 +86,7 @@
 
 - name: check ruby versions installed for select users
   sudo: no
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv versions --bare"
+  shell: sudo -iu {{ansible_user_id}} "rbenv versions --bare"
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
@@ -97,7 +97,7 @@
 
 - name: install ruby {{ item[1].version }} for select users
   sudo: no
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv install --skip-existing {{ item[1].version }}"
+  shell: sudo -iu {{ansible_user_id}} "rbenv install --skip-existing {{ item[1].version }}"
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
@@ -134,7 +134,7 @@
 
 - name: check if user ruby version is {{ rbenv.default_ruby }}
   sudo: no
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
+  shell: sudo -iu {{ansible_user_id}} "rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
   become: yes
   become_user: "{{ item }}"
   with_items: "{{ rbenv_users }}"
@@ -145,7 +145,7 @@
 
 - name: set ruby {{ rbenv.default_ruby }} for select users
   sudo: no
-  shell: $0 -lc "source {{ ansible_env.HOME }}/.bashrc && rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
+  shell: sudo -iu {{ansible_user_id}} "rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
   become: yes
   become_user: "{{ item[1] }}"
   with_together:
