--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -45,6 +45,11 @@
     insertafter: EOF
     create: yes
   when: test_grep.stdout == "0"  
+    
+- name: Source .bashrc
+  shell: . .bashrc
+  become: true
+  become_user: {{ ansible_user_id }}
 
 - name: set default-gems for select users
   copy:
@@ -85,8 +90,7 @@
     - rbenv_set_vars | bool
 
 - name: check ruby versions installed for select users
-  sudo: no
-  shell: sudo su - {{ansible_user_id}} -c "rbenv versions --bare"
+  shell: $0 -lc "rbenv versions --bare"
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
@@ -96,8 +100,7 @@
   check_mode: no
 
 - name: install ruby {{ item[1].version }} for select users
-  sudo: no
-  shell: sudo su - {{ansible_user_id}} -c 'rbenv install --skip-existing {{ item[1].version }}'
+  shell: $0 -lc "rbenv install --skip-existing {{ item[1].version }}"
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
@@ -133,8 +136,7 @@
   when: rbenv_clean_up | bool
 
 - name: check if user ruby version is {{ rbenv.default_ruby }}
-  sudo: no
-  shell: sudo su - {{ansible_user_id}} -c "rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
+  shell: $0 -lc "rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ rbenv.default_ruby }}'"
   become: yes
   become_user: "{{ item }}"
   with_items: "{{ rbenv_users }}"
@@ -144,8 +146,7 @@
   check_mode: no
 
 - name: set ruby {{ rbenv.default_ruby }} for select users
-  sudo: no
-  shell: sudo su - {{ansible_user_id}} -c "rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
+  shell: $0 -lc "rbenv global {{ rbenv.default_ruby }} && rbenv rehash"
   become: yes
   become_user: "{{ item[1] }}"
   with_together:
