--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -95,7 +95,7 @@
   check_mode: no
 
 - name: install ruby {{ item[1].version }} for select users
-  shell: $0 -lc "source {{ ansible_env.PATH/.bashrc }} && rbenv install --skip-existing {{ item[1].version }}"
+  shell: $0 -lc "source {{ ansible_env.PATH }} && rbenv install --skip-existing {{ item[1].version }}"
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
