--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -95,7 +95,10 @@
   check_mode: no
 
 - name: install ruby {{ item[1].version }} for select users
-  shell: cd; bash -lc "rbenv install --skip-existing {{ item[1].version }}"
+  shell: |
+    export PATH="${HOME}/.rbenv/bin:${PATH}"
+    eval "$(rbenv init -)"
+    rbenv install --skip-existing {{ item[1].version }}
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
