--- a/roles/ansible-rbenv-role/tasks/user_install.yml
+++ b/roles/ansible-rbenv-role/tasks/user_install.yml
@@ -85,7 +85,10 @@
     - rbenv_set_vars | bool
 
 - name: check ruby versions installed for select users
-  shell: $0 -lc "rbenv versions --bare"
+  shell: |
+    export PATH="${HOME}/.rbenv/bin:${PATH}"
+    eval "$(rbenv init -)" 
+    rbenv versions --bare
   with_items: "{{ rbenv_users }}"
   become: yes
   become_user: "{{ item }}"
@@ -95,10 +98,7 @@
   check_mode: no
 
 - name: install ruby {{ item[1].version }} for select users
-  shell: |
-    export PATH="${HOME}/.rbenv/bin:${PATH}"
-    eval "$(rbenv init -)"
-    rbenv install --skip-existing {{ item[1].version }}
+  shell: rbenv install --skip-existing {{ item[1].version }}
   become: yes
   args:
     creates: "~/.rbenv/versions/{{ item[1].version }}"
