--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -82,6 +82,8 @@
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" \
     rbenv install --skip-existing {{ ruby_version }} && \
     rbenv global {{ ruby_version }} && rbenv rehash
+  become: yes
+  become_user: "{{ rbnev_user }}"  
 
 - name: install bundler
   shell: |
@@ -89,14 +91,18 @@
     eval "$(rbenv init -)" \
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" \
     gem install bundler --no-ri --no-rdoc
+  become: yes
+  become_user: "{{ rbnev_user }}"
 
-- name: install bundler
+- name: install rails
   shell: |
     export PATH="${HOME}/.rbenv/bin:${PATH}" \
     eval "$(rbenv init -)" \
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" \
     gem install rails -v {{ rails_version }} --no-ri --no-rdoc && rbenv rehash
-    
+  become: yes
+  become_user: "{{ rbnev_user }}"
+
 - name: Install PostgreSQL Ubuntu
   apt:
     - postgresql
