--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -16,34 +16,34 @@
   when: ansible_facts['distribution'] == "CentOS"  
 
 - name: install packages Ubuntu
-  apt:
-    with_items:
-      - build-essential
-      - curl
-      - git
-      - libcurl4-openssl-dev
-      - libffi-dev
-      - libreadline-dev
-      - libssl-dev
-      - libxml2-dev
-      - libxslt1-dev
-      - zlib1g-dev
+  apt: name={{ item }}
+  with_items:
+    - build-essential
+    - curl
+    - git
+    - libcurl4-openssl-dev
+    - libffi-dev
+    - libreadline-dev
+    - libssl-dev
+    - libxml2-dev
+    - libxslt1-dev
+    - zlib1g-dev
     state: present
     install_recommends: no 
   when: ansible_facts['distribution'] == "Ubuntu"
 
 - name: install packages for CentOS
-  yum:
-    with_items:
-      - bzip2
-      - curl
-      - gcc
-      - git
-      - libffi-devel
-      - libyaml-devel
-      - openssl-devel
-      - readline-devel
-      - zlib-devel
+  yum: name={{ item }}
+  with_items:
+    - bzip2
+    - curl
+    - gcc
+    - git
+    - libffi-devel
+    - libyaml-devel
+    - openssl-devel
+    - readline-devel
+    - zlib-devel
     state: present
     install_recommends: no
   when: ansible_facts['distribution'] == "CentOS"
@@ -106,22 +106,26 @@
   become_user: "{{ rbnev_user }}"
 
 - name: Install PostgreSQL Ubuntu
-  apt:
-    with_items:
-      - postgresql
-      - postgresql-contrib
-      - libpq-dev
-      - python-psycopg2
+  apt: name={{ item }}
+  with_items:
+    - postgresql
+    - postgresql-contrib
+    - libpq-dev
+    - python-psycopg2
+  state: present
+  install_recommends: no 
   when: ansible_facts['distribution'] == "Ubuntu" 
 
 - name: Install PostgreSQL CentOS
-  yum:
-    with_items:
-      - postgresql
-      - postgresql-server
-      - postgresql-contrib
-      - postgresql-plpython
-      - python-psycopg2
+  yum: name={{ item }}
+  with_items:
+    - postgresql
+    - postgresql-server
+    - postgresql-contrib
+    - postgresql-plpython
+    - python-psycopg2
+  state: present
+  install_recommends: no
   when: ansible_facts['distribution'] == "CentOS"
     
 - name: Ensuring postgresql is started and enabled
