--- a/playbook.yml
+++ b/playbook.yml
@@ -14,6 +14,6 @@
       - libjemalloc-dev
   
   roles:
-    - { role: 'ansible-role-nodejs', tags: 'init', become: yes }
+    - { role: 'ansible-role-nodejs', tags: 'init', become: yes, ansible_user: "{{ ansible_user_id }}" }
     - { role: 'install_rbenv', tags: 'init', become: yes, rbenv_user: "{{ ansible_user_id }}" }
     
