change rbenv role

--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -75,9 +75,9 @@
   
 - name: install ruby
   shell: |
-    export PATH="${HOME}/.rbenv/bin:${PATH}" \
-    eval "$(rbenv init -)" \
-    export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" \
+    export PATH="${HOME}/.rbenv/bin:${PATH}" 
+    eval "$(rbenv init -)" 
+    export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     rbenv install --skip-existing {{ ruby_version }} && \
     rbenv global {{ ruby_version }} && rbenv rehash
 
