--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -66,9 +66,9 @@
   blockinfile:
     dest: "{{ ansible_env.HOME }}/.bashrc"
     block: |
-      export PATH=$HOME/.rbenv/bin:$PATH;
+      export PATH=$HOME/.rbenv/bin:$PATH
       export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"
-      eval "$(rbenv init -)";
+      eval "$(rbenv init -)"
     insertafter: EOF
     create: yes
   when: test_grep.stdout == "0"  
@@ -76,10 +76,13 @@
 - name: install ruby
   shell: |
     export PATH="${HOME}/.rbenv/bin:${PATH}" 
-    eval "$(rbenv init -)"  
-    rbenv install --skip-existing {{ ruby_version }}
-    rbenv global {{ ruby_version }}
+    eval "$(rbenv init -)" 
+    export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
+    rbenv install --skip-existing {{ ruby_version }} && \
+    rbenv global {{ ruby_version }} && \
     rbenv rehash
+  args:
+    executable: /bin/bash  
 
 - name: install bundler
   shell: |
@@ -93,7 +96,7 @@
     export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
-    gem install --no-document rails -v {{ rails_version }}
+    gem install --no-document rails -v {{ rails_version }} && \
     rbenv rehash
     
 - name: Install PostgreSQL Ubuntu
