--- a/playbook.yml
+++ b/playbook.yml
@@ -1,19 +1,6 @@
 - hosts: localhost
   gather_facts: true
-  vars:
-    rbenv:
-      env: user
-      version: v1.1.2
-      default_ruby: 2.6.5
-      rubies:
-        - version: 2.6.5
-          env:
-            RUBY_CONFIGURE_OPTS: "--enable-shared --with-jemalloc"
-    rbenv_extra_depends:
-      - libjemalloc1
-      - libjemalloc-dev
-  
+
   roles:
     - { role: 'ansible-role-nodejs', tags: 'init', become: yes, nodejs_install_npm_user: "{{ ansible_user_id }}" }
-    - { role: 'install_rbenv', tags: 'init', ansible_user: "{{ ansible_user_id }}" }
-    
+    - { role: 'install_rbenv', tags: 'init', rbenv_user: "{{ ansible_user_id }}" }
