change rbenv role

--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -20,9 +20,7 @@
     name: "{{ apt_packages }}"
     state: present
     install_recommends: no
-  with_items: "{{ rbenv_user }}"
-  become: yes
-  become_user: "{{ item }}"
+  become: true
   when: ansible_facts['distribution'] == "Ubuntu"
 
 - name: install packages for CentOS
@@ -30,9 +28,7 @@
     name: "{{ yum_packages }}"
     state: present 
     install_recommends: no
-  with_items: "{{ rbenv_user }}"
-  become: yes
-  become_user: "{{ item }}"
+  become: true
   when: ansible_facts['distribution'] == "CentOS"
   
 - name: clone rbenv
