--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -53,9 +53,8 @@
     export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
-    rbenv install --skip-existing {{ ruby_version }} && \
-    rbenv global {{ ruby_version }} && \
-    rbenv rehash
+    rbenv install --skip-existing {{ ruby_version }}
+    rbenv global {{ ruby_version }}
   args:
     executable: /bin/bash
   with_items: "{{ rbenv_user }}"
@@ -71,6 +70,8 @@
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
+  args:
+    executable: /bin/bash
 
 - name: install rails
   shell: |
@@ -82,6 +83,8 @@
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
+  args:
+    executable: /bin/bash
 
 - name: Install PostgreSQL Ubuntu
   apt: name={{ item }} state=present install_recommends=no
