--- a/playbook.yml
+++ b/playbook.yml
@@ -3,4 +3,5 @@
 
   roles:
     - { role: 'ansible-role-nodejs', tags: 'init', become: yes, nodejs_install_npm_user: "{{ ansible_user_id }}" }
+    - { role: 'ansible-role-yarn', tags: 'init', become: yes }
     - { role: 'install_rbenv', tags: 'init', become: yes, rbenv_user: "{{ ansible_user_id }}" }
