--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -55,6 +55,8 @@
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     rbenv install --skip-existing {{ ruby_version }}
     rbenv global {{ ruby_version }}"
+  args:
+    executable: /bin/bash
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
@@ -68,17 +70,21 @@
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
+  args:
+    executable: /bin/bash
 
 - name: install rails
   shell: |
     $0 -lc "export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
-    gem install --no-document rails -v {{ rails_version }}
+    gem install --no-document rails -v {{ rails_version }} && \
     rbenv rehash"
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
+  args:
+    executable: /bin/bash
 
 - name: Install PostgreSQL Ubuntu
   apt: name={{ item }} state=present install_recommends=no
