--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -50,11 +50,11 @@
   
 - name: install ruby
   shell: |
-    $0 -lc "export PATH="${HOME}/.rbenv/bin:${PATH}" 
+    export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     rbenv install --skip-existing {{ ruby_version }}
-    rbenv global {{ ruby_version }}"
+    rbenv global {{ ruby_version }}
   args:
     executable: /bin/bash
   with_items: "{{ rbenv_user }}"
@@ -63,10 +63,10 @@
 
 - name: install bundler
   shell: |
-    $0 -lc "export PATH="${HOME}/.rbenv/bin:${PATH}" 
+    export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
-    gem install --no-document bundler" 
+    gem install --no-document bundler 
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
@@ -75,11 +75,11 @@
 
 - name: install rails
   shell: |
-    $0 -lc "export PATH="${HOME}/.rbenv/bin:${PATH}" 
+    export PATH="${HOME}/.rbenv/bin:${PATH}" 
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     gem install --no-document rails -v {{ rails_version }} && \
-    rbenv rehash"
+    rbenv rehash
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
