--- a/roles/install_rbenv/tasks/main.yml
+++ b/roles/install_rbenv/tasks/main.yml
@@ -54,9 +54,16 @@
     eval "$(rbenv init -)" 
     export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     rbenv install --skip-existing {{ ruby_version }}
+  with_items: "{{ rbenv_user }}"
+  become: yes
+  become_user: "{{ item }}"
+  
+- name: set ruby
+  shell: |
+    export PATH="${HOME}/.rbenv/bin:${PATH}" 
+    eval "$(rbenv init -)" 
+    export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH" 
     rbenv global {{ ruby_version }}
-  args:
-    executable: /bin/bash
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
@@ -70,8 +77,6 @@
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
-  args:
-    executable: /bin/bash
 
 - name: install rails
   shell: |
@@ -83,8 +88,6 @@
   with_items: "{{ rbenv_user }}"
   become: yes
   become_user: "{{ item }}"
-  args:
-    executable: /bin/bash
 
 - name: Install PostgreSQL Ubuntu
   apt: name={{ item }} state=present install_recommends=no
